<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textStyle="bold"
            android:id="@+id/editText_num1"
            android:textSize="18sp"
            android:hint="@string/editText_num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textStyle="bold"
            android:id="@+id/editText_num2"
            android:textSize="18sp"
            android:hint="@string/editText_num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/button_add"
            android:text="@string/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/button_sub"
            android:text="@string/button_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/button_mul"
            android:text="@string/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/button_div"
            android:text="@string/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/button_calc"
        android:text="@string/button_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
